# shift

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  PKGBUILD  README.md  ardos-linker
app-framework/: README.md
app-framework/core/src/: lib.rs
app-framework/examples/minimal-gl/src/: main.rs
app-framework/gl/src/: framework.rs  lib.rs
app-framework/src/: lib.rs
shift/: Cargo.toml  build.rs
shift/src/: app.rs  cursor_sync.rs  error.rs  ids.rs  input.rs  main.rs  output.rs  presenter.rs  renderer.rs
shift/src/animations/: animation.rs  blur.rs  crossfade.rs  mod.rs  slide.rs
shift/src/auth/: error.rs  mod.rs  token.rs
shift/src/client_layer/: client.rs  client_view.rs  mod.rs
shift/src/comms/: client2server.rs  input2server.rs  mod.rs  render2server.rs  server2client.rs  server2render.rs
shift/src/input_layer/: channels.rs  mod.rs
shift/src/monitor/: mod.rs
shift/src/opengl/: shader.rs
shift/src/rendering_layer/: animation.rs  channels.rs  commands.rs  dmabuf_import.rs  fence_runtime.rs  fence_scheduler.rs  mod.rs  render_core.rs
shift/src/server_layer/: mod.rs  server.rs
shift/src/sessions/: mod.rs  pending_sessions.rs  role.rs  session.rs
tab/: v1.md  v2.md
tab-client/: Cargo.toml
tab-client/examples/: cursor_demo.rs  dvd_rust.rs  penger_client.rs
tab-client/examples/cmake-demo/: CMakeLists.txt  main.cpp
tab-client/examples/dvd-client-cpp/: logs.txt
tab-client/include/: tab_client.h
tab-client/src/: c_bindings.rs  events.rs  gbm_allocator.rs  lib.rs
tab-client/src/c_bindings/: connection.rs  event.rs  frame.rs  input.rs  mod.rs  monitor.rs  session.rs
tab-protocol/: Cargo.toml
tab-protocol/src/: lib.rs  message_frame.rs
tab-server/src/: lib.rs  server.rs  session.rs
