[workspace]
resolver = "2"
members = [
    "shift",
    "tab-protocol",
    "tab-client",
    "app-framework",
    "app-framework/core",
    "app-framework/gl",
    "app-framework/xkb",
    "app-framework/monitor-layout-engine",
    "app-framework/examples/minimal-gl",
]

[workspace.package]
edition = "2024"
version = "0.1.0-alpha"

[workspace.dependencies]
nix = { version = "0.29", default-features = false, features = ["socket", "uio"] }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-tracy = "0.11"
# easydrm = {path="../easydrm"}
easydrm = {git = "https://github.com/ardos-os/easydrm", branch="main"}
tokio = {version="1.49.0", features=["macros", "net", "rt-multi-thread", "time", "sync"]}
anyhow = "1.0"
skia-safe = { git = "https://github.com/coffeeispower/rust-skia.git", rev = "e51839613c4841e5e09e7d50d94f78bd4d811130", version = "0.91.0", default-features = false, features = ["gl"] }
[profile.release-with-debug]
inherits = "release"
debug = true
