[package]
name = "shift"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
easydrm = { workspace = true }
tab-protocol = { path = "../tab-protocol" }
tab-server = { path = "../tab-server", features = ["easydrm"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nix = { workspace = true }
thiserror = { workspace = true }
libc = "0.2"
input = "0.9.1"
linux-raw-sys = { version = "0.12.0", default-features = false, features = ["ioctl"] }
[build-dependencies]
gl_generator = "0.14"
